# laser_uav_managers

./: CMakeLists.txt  README.md  package.xml
include/laser_uav_managers/: .control_manager_node.hpp.swp  control_manager_node.hpp  estimation_manager_node.hpp
launch/: .behaviors_manager.launch.py.swp  control_manager.launch.py  estimation_manager.launch.py  plotjuggler.launch.py
params/: control_manager.yaml  estimation_manager.yaml  nmpc_controller.yaml
params/control_manager/: .x500.yaml.swp  x500.yaml
params/laser_uavs/: lr7pro.yaml  x500.yaml
plotjuggler/: eval_control_layout.xml
scripts/: refactor_plotjuggler_config.sh
src/: control_manager_main.cpp  control_manager_node.cpp  estimation_manager_main.cpp  estimation_manager_node.cpp
